I fixed issues for iMacs, Iphone 6s+, ipad pro, and stoped every animation on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -653,6 +653,9 @@
 
 
 
+
+
+
 /* Wide */
 
 	@media screen and (max-width: 1680px) {
@@ -838,7 +841,7 @@
 		} 
     }
 
-/* iPad Mini */
+/* iPad Mini query*/
 
 @media only screen 
 and (min-device-width : 768px) 
@@ -881,6 +884,105 @@ and (-webkit-min-device-pixel-ratio: 1)  {
             header img {
                 margin-top: 5em;
             }
+        
+        /* I want to stop every animation for 736px and under */
+        
+        #wrapper {
+            -moz-animation: wrapper .1s forwards;
+            -webkit-animation: wrapper .1s forwards;
+            -ms-animation: wrapper .1s forwards;
+            animation: wrapper .1s forwards;
+            height: 100%;
+            left: 0;
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
+	    }
+        
+        #header {
+            -moz-animation: header 0.1s 0s forwards;
+            -webkit-animation: header 0.1s 0s forwards;
+            -ms-animation: header 0.1s 0s forwards;
+            animation: header 0.1s 0s forwards;
+        }
+        
+        #header nav li {
+            -moz-animation: nav-icons 0.1s ease-in-out forwards;
+            -webkit-animation: nav-icons 0.1s ease-in-out forwards;
+            -ms-animation: nav-icons 0.1s ease-in-out forwards;
+            animation: nav-icons 0.1s ease-in-out forwards;
+        }
+        
+                #header nav li:nth-child(1) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(2) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(3) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(4) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(5) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(6) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(7) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(8) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(9) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
+
+				#header nav li:nth-child(10) {
+					-moz-animation-delay: .1s;
+					-webkit-animation-delay: .1s;
+					-ms-animation-delay: .1s;
+					animation-delay: .1s;
+				}
 
         
 		/* BG */
@@ -1205,6 +1307,56 @@ article {
 
 
 
+
+
+
+/* iMac 21 media query */
+
+
+/*
+@media 
+(-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi) { 
+    
+*/
+    
+@media only screen 
+and (min-device-width : 1800px) {
+    
+    
+    #bg {
+			background-size: 850px auto;
+			/* width: 4500px; */
+	}
+    
+    #header img {
+        width: 35%;
+        height: 35%;
+    }
+    
+    #header h1 {
+        font-size: 3.7em;
+    }
+    
+    #header p {
+		font-size: 1.6em;
+    }
+    
+    #back:hover { 
+         font-size: 1.8em;
+    }
+
+    .back1 {
+        margin-right: 1em;
+        font-size: 1.7em;
+    }
+
+    .back2 {
+        margin-left: 1em;
+        font-size: 1.7em;
+    }
+
+}
 
 
 
